# haskell-gllib

./: .gitignore  README.md  gllib.cabal  stack.yaml
src/: GLLib.hs
src/GLLib/: Application.hs  GLFW.hs  Mesh.hs  Program.hs  Texture.hs  Utils.hs  Vec.hs
src/GLLib/Mesh/: JSON.hs  OBJ.hs
